# ashwinvin.github.io

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build_web.sh  plans.md  setup_web.sh
.github/workflows/: linting.yml  static.yml
assets/: common.css  index.css
docs/: ashwinvin.js  ashwinvin_bg.wasm  index.html
portfolio/: package-lock.json  package.json
portfolio/src/components/: Footer.astro  MainHead.astro  Nav.astro
portfolio/src/pages/: index.astro
scripts/: build.py  builder.py  parser.py  requirements.txt
src/: index.html  info.rs  lib.rs  projects.rs  sidebar.rs  user_info.rs
src/books/: Atomic Habits.md  The Stranger.md  atomic_habits.md  the_stranger.md
src/essays/: perfectionism.md
src/resources/: binary.md  guide_for_mini_essays.md  lambda_calc_basic_intro.md
templates/: article.html  base.html  books.css  books.html  category_index.html
