[package]
name = "ashwinvin"
version = "0.1.0"
authors = ["Ashwin Vinod <ashwinvinodsat@gmail.com>"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.16.0"  # Gives us egui, epi and web+native backends

serde = { version = "1", features = ["derive"]}


[profile.release]
opt-level = 2 # fast and small wasm
lto = true
